# AgentVBench

./: .gitignore  LICENSE  README.md  REPRODUCE.md  SCORE_ADJUSTMENTS.md  pyproject.toml
examples/: README.md
examples/assembly/: perfect_solution.json
examples/task_5_video_order/: perfect_solution.json
verifiers/: __init__.py
verifiers/assembly/: README.md  __init__.py  score.py
verifiers/recap/: README.md  __init__.py  kinds.py  score.py
verifiers/repair/: README.md  __init__.py  cells.json  score.py
verifiers/repair/ground_truth/v1/s1/: profile.json
verifiers/repair/ground_truth/v2/s1/: profile.json
verifiers/repair/ground_truth/v2/s2/: profile.json
verifiers/repair/ground_truth/v3/s3/: profile.json
verifiers/repair/ground_truth/v4/s1/: profile.json
verifiers/repair/ground_truth/v5/s1/: profile.json
verifiers/repair/ground_truth/v5/s2/: profile.json
verifiers/repair/ground_truth/v5/s3/: profile.json
verifiers/repair/ground_truth/v5/s4/: profile.json
verifiers/repair/ground_truth/v6/s1/: profile.json
verifiers/repair/ground_truth/v7/s1/: profile.json
verifiers/repair/lib/rubrics/: __init__.py  _description.py  _localize.py  format.py  format_config.json
verifiers/repair/lib/tasks/v01_frozen_scene/: task.json
verifiers/repair/lib/tasks/v04_color_grade_shift/: task.json
verifiers/repair/lib/tasks/v05_noise_floor_spike/: localize.py
verifiers/repair/lib/tasks/v06_duplicate_segment/: localize.py
verifiers/repair/lib/tasks/v07_audio_video_desync/: localize.py
verifiers/sequencing/: README.md  __init__.py  score.py
verifiers/task_4_cutbench/: README.md  __init__.py  kinds.py  llm_judges.py  score.py
verifiers/task_5_video_order/: README.md  __init__.py  score.py
verifiers/task_6_video_repair/: README.md  __init__.py  score.py
verifiers/task_6_video_repair/ground_truth/v1/s2/: profile.json
verifiers/task_6_video_repair/ground_truth/v1/s3/: profile.json
verifiers/task_6_video_repair/ground_truth/v2/s3/: profile.json
verifiers/task_6_video_repair/ground_truth/v3/s1/: profile.json
verifiers/task_6_video_repair/ground_truth/v3/s2/: profile.json
verifiers/task_6_video_repair/ground_truth/v4/s2/: profile.json
verifiers/task_6_video_repair/ground_truth/v4/s3/: profile.json
verifiers/task_6_video_repair/ground_truth/v6/s2/: profile.json
verifiers/task_6_video_repair/ground_truth/v6/s3/: profile.json
verifiers/task_6_video_repair/ground_truth/v7/s2/: profile.json
verifiers/task_6_video_repair/ground_truth/v7/s3/: profile.json
verifiers/task_6_video_repair/lib/rubrics/: edit.py
verifiers/task_6_video_repair/lib/tasks/_combined/: localize.py
verifiers/task_6_video_repair/lib/tasks/v01_frozen_scene/: localize.py
verifiers/task_6_video_repair/lib/tasks/v03_scene_swap/: localize.py  task.json
verifiers/task_6_video_repair/lib/tasks/v04_color_grade_shift/: localize.py
verifiers/task_6_video_repair/lib/tasks/v05_noise_floor_spike/: task.json
verifiers/task_6_video_repair/lib/tasks/v06_duplicate_segment/: task.json
verifiers/task_6_video_repair/lib/tasks/v07_audio_video_desync/: task.json
verifiers/task_7_video_assembly/: README.md  __init__.py  score.py
