[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticvbench"
version = "0.1.0"
description = "Verifiers for the AgenticVBench benchmark — 100 video-production agent tasks across 4 task families."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Anonymous" }]
keywords = ["benchmark", "evaluation", "video", "agents", "multimodal"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "datasets>=2.16",      # for loading the AgentVBench_100 HF configs
  "pyarrow>=14",
  "requests>=2.31",
]

[project.optional-dependencies]
# recap requires the Gemini File API for LLM-judge rubric items
recap = ["google-genai>=0.3"]
# repair uses ffprobe via subprocess; OpenCV/SciPy used by some
# of the kit's signal-processing rubrics (xcorr, SSIM)
repair = ["numpy>=1.24", "opencv-python>=4.8", "scipy>=1.11"]
all = [
  "google-genai>=0.3",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scipy>=1.11",
]

[project.scripts]
avb-score-sequencing = "verifiers.sequencing.score:cli"
avb-score-assembly = "verifiers.assembly.score:cli"
avb-score-recap = "verifiers.recap.score:cli"
avb-score-repair = "verifiers.repair.score:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["verifiers*"]
