[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticvbench"
version = "0.2.0"
description = "Verifiers for three families of the AgenticVBench benchmark (sequencing, repair, assembly). The recap grader is released separately."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Anonymous" }]
keywords = ["benchmark", "evaluation", "video", "agents", "multimodal"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "datasets>=2.16",      # for loading the AgenticVBench_100 HF dataset
  "pyarrow>=14",
  "requests>=2.31",
]

[project.optional-dependencies]
# repair uses ffprobe via subprocess; OpenCV / NumPy / SciPy power the kit's
# signal-processing rubrics (SSIM, dhash, audio xcorr)
repair = ["numpy>=1.24", "opencv-python>=4.8", "scipy>=1.11"]
all = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "scipy>=1.11",
]

[project.scripts]
avb-score-sequencing = "verifiers.sequencing.score:cli"
avb-score-repair = "verifiers.repair.score:cli"
avb-score-assembly = "verifiers.assembly.score:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["verifiers*"]
